fix:fixing issues with backround

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <span class="text-xs ml-5 cursor-pointer underline">Acheter</span>
     </div>
     <div class="grow justify-between flex bg-[#EDEDED] px-[69px] items-start pt-10">
-      <div class="border overflow-hidden w-[400px] h-[500px] relative">
-        <div class="absolute left-0 top-0" id="dunk-description">
+      <div class="border  h-[500px] relative">
+        <div class="absolute left-0 top-0 w-[380px] bg-[#EDEDED]" id="dunk-description">
           <h1 class="poppins-semibold text-[52px] " >Nike dunk low</h1>
           <h6 class="h-10 poppins-regular">Chaussure sur homme</h6>
           <div class="mb-[71px] text-[52px]">$199 <span class="line-through text-[#A0A0A0]">$1499</span></div>
@@ -47,7 +47,7 @@
           </div>
         </div>
         
-        <div class="absolute left-[-500px] top-0 " id="max-description">
+        <div class="absolute left-[-500px] bg-[#EDEDED] w-[380px] top-0 " id="max-description">
           <h1 class="poppins-semibold text-[52px] ">Nike AIR MAX PLUS</h1>
           <h6 class="h-10 poppins-regular">Chaussure sur homme</h6>
           <div class="mb-[71px] text-[52px]">$250 <span class="line-through text-[#A0A0A0]">$300</span></div>
