fix: fixing bug with index

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <span class="text-xs ml-5 cursor-pointer underline">Acheter</span>
     </div>
     <div class="grow justify-between flex bg-[#EDEDED] px-[69px] items-start pt-10">
-      <div class="border  h-[500px] relative">
+      <div class=" w-[380px] h-[500px] relative">
         <div class="absolute left-0 top-0 w-[380px] bg-[#EDEDED]" id="dunk-description">
           <h1 class="poppins-semibold text-[52px] " >Nike dunk low</h1>
           <h6 class="h-10 poppins-regular">Chaussure sur homme</h6>
